# dust3r-pytorch-inference-minimal

./: .gitignore  README.md  example_image_pair.py  example_raw_output.py  export_onnx.py  pyproject.toml  requirement.txt
dust3r/: __init__.py  blocks.py  common.py  decoder.py  dust3r.py  encoder.py  head.py  postprocess.py  preprocess.py  utils.py  visualization.py
